<resources>
    <string name="app_name" translatable="false">PlacarApp</string>
    <string name="label_titulo">Teams</string>
    <string name="label_rodape">Developed by Fellipe Oliveira</string>
    <string name="time_1">Home Team</string>
    <string name="jogar">Play</string>
    <string name="digite_o_nome_do_time">Type the name of the team</string>
    <string name="placarInicial" translatable="false">0</string>
    <string name="btnGolPlacar">GOL</string>
    <string name="time_2">Visiting Team</string>
</resources>
