<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fellipe.placarapp.MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_rodape"
        android:layout_below="@+id/tv_titulo"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTimeCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_nome_do_time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTimeVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_nome_do_time" />

        <Button
            android:id="@+id/btn_jogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jogar" 
            android:onClick="comecarJogo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/label_rodape"
        android:textSize="18sp" />
</RelativeLayout>
